Add frameborder and transparecy to iframe Add package-lock.json file

--- a/src/app/shared/components/cards/track-card/track-card.component.html
+++ b/src/app/shared/components/cards/track-card/track-card.component.html
@@ -14,5 +14,5 @@
   </div>
 
   <iframe [src]="track.uri | sanitizeuri" width="100%" height="80" frameborder="0" allowtransparency="true"
-    allow="encrypted-media"></iframe>
+    allow="encrypted-media" frameborder="0" allowtransparency="true"></iframe>
 </div>
